--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -14,13 +14,15 @@ execute:
 
 - Install R, R Studio and the Tidyverse collection of packages if you have not done so already (see [getting started](/modules/getting-started.html))
 - Install the `janitor` package (`install.packages("janitor")`)
-- Start a new quarto project called "modules" and generate a quarto document named "module-1.1.qmd" so that you can use to follow along with this exercise
+- Have a look at the documentation for [readr](https://readr.tidyverse.org/), [dplyr](https://dplyr.tidyverse.org/), [tidyr](https://tidyr.tidyverse.org/) and [janitor](https://sfirke.github.io/janitor/)
+- Familiarize yourself with the [readr](file:///C:/Users/emman/Downloads/data-import.pdf), [dplyr](file:///C:/Users/emman/Downloads/data-transformation-1.pdf) and [tidyr](file:///C:/Users/emman/Downloads/tidyr.pdf) cheatsheets
 - Create a new directory/folder in your project folder called "data" where you can store .csv files
+- Start a new quarto project called "modules" and generate a quarto document named "module-1.1.qmd" inside of it so that you can code along with me
 :::
 
 ::: {.callout-note} 
 
-In this module, we will be using the `readr`, `tidyr` and `dplyr` packages from the Tidyverse. While we could just load the entire Tidyverse collection of packages (e.g. `library(tidyverse)`), it is generally better from a [performance standpoint](https://stackoverflow.com/questions/50257990/what-is-the-advantage-of-using-librarytidyverse-instead-of-sub-packages) to load the packages individually. 
+In this module, we will be using the `readr`, `tidyr` and `dplyr` packages from the Tidyverse. While we could just load the entire Tidyverse collection of packages (e.g. `library(tidyverse)`), it is generally better from a [performance standpoint](https://stackoverflow.com/questions/50257990/what-is-the-advantage-of-using-librarytidyverse-instead-of-sub-packages) to load the packages individually. Also it is good to be more intentional about which packages we are loading while we are learning them. 
 
 Also, we will load the packages as we go along in various code chunks. But it is also possible to load all of the packages you will be using in a Quarto doc or R script in a single "setup" code chunk at the beginning of the file. You will see both workflows represented in this course.
 :::
